fix: Make new message marking more readable

--- a/src/main/resources/de/uniks/stp/wedoit/accord/client/dark-theme.css
+++ b/src/main/resources/de/uniks/stp/wedoit/accord/client/dark-theme.css
@@ -57,6 +57,6 @@
 
 .newMessage {
     -fx-text-fill: #ffffff;
-    -fx-background-color: #5e0000;
-    -fx-border-color: #ff0000;
+    -fx-background-color: rgba(127, 0, 0, 0.5);
+    -fx-border-color: rgba(255, 0, 0, 0.75);
 }
